--- a/src/main/resources/templates/country/delete.html
+++ b/src/main/resources/templates/country/delete.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
+
 <head>
     <meta charset="utf-8">
     <title>Tutorial of JPA</title>
@@ -11,6 +12,8 @@
     <form method="post" action="/country/delete">
         <input type="text" name="code" th:value="${code}">
         <button type="submit">送信</button>
+        <a href="/country/list">一覧に戻る</a>
     </form>
 </body>
+
 </html>
