--- a/src/main/resources/templates/country/detail.html
+++ b/src/main/resources/templates/country/detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="utf-8">
     <title>Tutorial of JPA</title>
@@ -9,11 +10,22 @@
     <h1>Country 詳細</h1>
     <form method="post" action="/country/detail">
         <table th:object="${country}">
-            <tr><th>コード</th><td><input type="text" name="code" th:value="*{code}"></td></tr>
-            <tr><th>国名</th><td><input type="text" name="name" th:value="*{name}"></td></tr>
-            <tr><th>人口</th><td><input type="text" name="population" th:value="*{population}"></td></tr>
+            <tr>
+                <th>コード</th>
+                <td><input type="text" name="code" th:value="*{code}"></td>
+            </tr>
+            <tr>
+                <th>国名</th>
+                <td><input type="text" name="name" th:value="*{name}"></td>
+            </tr>
+            <tr>
+                <th>人口</th>
+                <td><input type="text" name="population" th:value="*{population}"></td>
+            </tr>
         </table>
         <button type="submit">送信</button>
+        <a href="/country/list">一覧に戻る</a>
     </form>
 </body>
+
 </html>
